# rs

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  docker.yml  release.yml
.sqlx/: query-8975587c5302e099dad1a836b55949a315e90669e7753dc14cd540f44a52d018.json  query-a3c95eab24ba7f66e37a9140497b54fbfd260ad405f35f60fc5d3a6487a2c972.json  query-ab24aafd5130fadf7324d3cee004787be60d3c359b01d1216e444503bdd86317.json  query-b6ee4564698c0746f2dd4eff44d5d825283f649e400833d4535a902910af5b4b.json
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
migrations/: 20260501000000_init.sql
scripts/: enforce-repo-settings.sh
src/: error.rs  main.rs  task.rs
src/task/: handler.rs  mod.rs  model.rs
