[package]
name = "rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/entity"]

[dependencies]
entity = { path = "crates/entity" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
